fix: remove wrap for chrome navbar (it overflowed for mid-screens)

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ nav {
   width: 100%;
   z-index: 1;
   overflow: hidden;
+  text-wrap: nowrap;
 }
 nav a {
   font-size: var(--fs-sm);
